package je.applicatie.domain.soexintegratie.Interfaces;

public interface ExternalServicesInterface {
    String fetchData(String param);
}